# damage-game

./: .gitignore  README.md  pyproject.toml
configs/: damage-game.json  local-lmstudio.example.json  poker-texasholdem.json  smoke.bios.local.json  smoke.fast.local.json  smoke.ongoing.local.json  smoke.sim.local.json
docs/: architecture-connectivity-spec.md  damage-sim-spec.md  implementation-status.md  pixel-topdown-visualizer-spec.md  realtime-visualizer-spec.md  schema-spec.md  threejs-tournament-platform-spec.md
src/damage_game/: __init__.py  cli.py  event_log.py  model_router.py  models.py  profiles.py  provider_image_openai_compat.py  provider_openai_compat.py  replay.py  replay_cli.py  simulator.py  smoke_cli.py  token_monitor.py  tournament.py  tournament_cli.py  visualizer_cli.py  visualizer_server.py
src/damage_game/static/: arena.html  bio.html  index.html  table.html
