[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "damage-game"
version = "0.1.0"
description = "Damage-inspired card game simulation with LLM agents and emotion modeling"
requires-python = ">=3.10"

[project.scripts]
damage-sim = "damage_game.cli:main"
damage-replay = "damage_game.replay_cli:main"
damage-viz = "damage_game.visualizer_cli:main"
damage-tournament = "damage_game.tournament_cli:main"
damage-smoke = "damage_game.smoke_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
damage_game = ["static/*.html"]
